fix to image stretch

--- a/_sass/_homepage-featured-section.scss
+++ b/_sass/_homepage-featured-section.scss
@@ -28,7 +28,8 @@
 
 .featured-section-thumbnail {
   margin-right: 30px;
-  height: 100%;
+  height: auto;
+  width: 100%;
 }
 
 .featured-section-summary {
